@@ -10,28 +10,25 @@ public class AnimalStream {
                 new Animal("ライオン", "哺乳類", 5),
                 new Animal("キリン", "哺乳類", 8),
                 new Animal("カラス", "鳥類", 10),
-                new Animal("亀", "爬虫類", 20)
+                new Animal("亀", "爬虫類", 20),
+                new Animal("サメ", "軟骨魚類", 6)
         );
 
-        // 爬虫類の動物
-        List<Animal> birds = animals.stream()
-                .filter(animal -> animal.getSpecies().equals("哺乳類"))
-                .toList();
+        List<Animal> reptiles = animals.stream()
+                .filter(animal -> animal.getSpecies().equals("爬虫類"))
+                .collect(Collectors.toList());
 
-        // 年齢でソート
         List<Animal> sortedByAge = animals.stream()
                 .sorted(Comparator.comparingInt(Animal::getAge))
                 .toList();
 
-        // 爬虫類の動物の表示
-        String reptilesString = birds.stream()
+        String reptilesString = reptiles.stream()
                 .map(Animal::getName)
                 .collect(Collectors.joining("と"));
 
-        System.out.println("哺乳類の動物:"+ reptilesString);
+        System.out.println("爬虫類の動物:"+ reptilesString);
         System.out.println("年齢(若い順)");
 
-        // 年齢順で表示
         for (int i = 0; i < sortedByAge.size(); i++) {
             Animal animal = sortedByAge.get(i);
             System.out.println((i + 1) + "、" + animal.toString());
